force-app/main/default/objects/Asset/fields/External_Controller_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Controller_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Controller ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
    <description>Stable external key for controller/device records. Values: CTRL-001 through CTRL-004. Used as upsert key when loading from CSV seed data.</description>
</CustomField>