force-app/main/default/objects/Asset/fields/Warranty_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiry_Date__c</fullName>
    <label>Warranty Expiry Date</label>
    <type>Date</type>
    <description>Date on which the controller warranty expires. Calculated as purchaseDate + warrantyMonths. Used to determine IN_WARRANTY vs OUT_OF_WARRANTY status.</description>
</CustomField>