force-app/main/default/objects/Asset/fields/Warranty_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Months__c</fullName>
    <label>Warranty Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Length of warranty period in months from purchase date. Standard value is 12 for all demo controllers.</description>
</CustomField>