force-app/main/default/objects/Asset/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <label>Warranty Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>IN_WARRANTY</fullName><default>false</default><label>In Warranty</label></value>
            <value><fullName>OUT_OF_WARRANTY</fullName><default>false</default><label>Out of Warranty</label></value>
            <value><fullName>UNKNOWN</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Current warranty status of the registered controller. Derived from Warranty_Expiry_Date__c and demo date. Drives entitlement path selection.</description>
</CustomField>